--- a/game-client/src/app/board/board.component.html
+++ b/game-client/src/app/board/board.component.html
@@ -5,5 +5,5 @@
   </div>
   </span>
 
-<button  name="chooseSide(1)" (click)="chooseSide(1)" >Graj "X"</button>
-<button  name="chooseSide(2)" (click)="chooseSide(2)" >Graj "O"</button>
+<!--<button  name="chooseSide(1)" (click)="chooseSide(1)" >Graj "X"</button>
+<button  name="chooseSide(2)" (click)="chooseSide(2)" >Graj "O"</button>-->
