--- a/game-client/src/app/app.component.html
+++ b/game-client/src/app/app.component.html
@@ -3,8 +3,9 @@
 
   <button type="button" (click)="clear()">Clear</button>
   <button type="button" (click)="play()">Play</button>
-  {{msg}}
+  <button type="button" (click)="playWithAI()">Play with Computer</button>
+  {{gameID}}
 
-<app-board [board]="board" (setField)="setField($event)" [side]="side" ></app-board>
+  <app-board [board]="board" (setField)="setField($event)" [side]="side" ></app-board>
 </div>
 
