--- a/game-client/src/app/app.component.html
+++ b/game-client/src/app/app.component.html
@@ -1,11 +1,4 @@
-<div class="container">
-  <!--<input  [ngModel] = "msgText" name="name" type="text">-->
 
-  <button type="button" (click)="clear()">Clear</button>
-  <button type="button" (click)="play()">Play</button>
-  <button type="button" (click)="playWithAI()">Play with Computer</button>
-  {{gameID}}
+  <app-game [gameUri]="game"></app-game>
 
-  <app-board [board]="board" (setField)="setField($event)" [side]="side" ></app-board>
-</div>
 
