--- a/game-client/src/app/app.component.html
+++ b/game-client/src/app/app.component.html
@@ -1,4 +1,7 @@
 
-  <app-game [gameUri]="game"></app-game>
+<!--
+  <app-game [gameUri]="'/xo'"></app-game>
+-->
+  <app-game [gameUri]="'/gomoku'"></app-game>
 
 
