--- a/game-client/src/app/game/game.component.html
+++ b/game-client/src/app/game/game.component.html
@@ -6,6 +6,12 @@
   <button type="button" (click)="playWithAI()">Play with Computer</button>
   {{gameID}}
 
+<!--
   <app-board [board]="board" (setField)="setField($event)" [side]="side" [result]="gameResult" [blockMove]="blockMove" ></app-board>
+
+-->
+
+  <app-gomoku [board]="board" (setField)="setField($event)" [side]="side" [result]="gameResult" [blockMove]="blockMove" ></app-gomoku>
+
 </div>
 
